--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/color_black" />
-    <size android:height="50dp" android:width="50dp"></size>
+    <solid android:color="#000000" />
+    <size android:height="50dp" android:width="50dp"/>
 </shape>
