--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -19,24 +19,25 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <android.support.design.widget.CoordinatorLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:fitsSystemWindows="true"
+            android:orientation="horizontal">
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:elevation="8dp"
-                android:fitsSystemWindows="true"
-                android:stateListAnimator="@animator/appbar_always_elevated"
                 tools:targetApi="lollipop">
 
                 <android.support.design.widget.CollapsingToolbarLayout
                     android:id="@+id/toolbar_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fitsSystemWindows="true"
+                    android:layout_height="match_parent"
                     android:theme="@style/Theme.App.AppBarOverlay"
                     app:contentScrim="@color/colorPrimary"
                     app:expandedTitleMarginBottom="20dp"
@@ -49,7 +50,7 @@
                     <ImageView
                         android:id="@+id/postal_iv"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
+                        android:layout_height="match_parent"
                         android:adjustViewBounds="true"
                         android:contentDescription="@{@string/postal_img_description(movie.title)}"
                         android:fitsSystemWindows="true"
@@ -65,27 +66,25 @@
                         android:layout_height="?attr/actionBarSize"
                         android:shadowColor="@color/colorSecondaryDark"
                         app:layout_collapseMode="pin" />
+
                     <FrameLayout
+                        android:id="@+id/favorite_fragment_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|end"
-                        android:id="@+id/favorite_fragment_container"/>
+                        android:layout_gravity="center_vertical|end" />
 
                 </android.support.design.widget.CollapsingToolbarLayout>
             </android.support.design.widget.AppBarLayout>
 
             <android.support.v4.widget.NestedScrollView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:fillViewport="true"
-                android:fitsSystemWindows="true"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                android:layout_weight="1.5">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="1dp"
-                    android:layout_marginTop="5dp"
                     tools:targetApi="o">
 
                     <android.support.v7.widget.CardView
@@ -241,7 +240,7 @@
                             android:id="@+id/videos_fragment_container"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="22sp"/>
+                            android:layout_marginTop="22sp" />
 
                     </android.support.v7.widget.CardView>
 
@@ -268,12 +267,12 @@
                             android:id="@+id/reviews_fragment_container"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="22sp"/>
+                            android:layout_marginTop="22sp" />
                     </android.support.v7.widget.CardView>
                 </android.support.constraint.ConstraintLayout>
             </android.support.v4.widget.NestedScrollView>
 
-        </android.support.design.widget.CoordinatorLayout>
+        </LinearLayout>
         <!--  layout for displaying the full movie postal on screen -->
         <android.support.constraint.ConstraintLayout
             android:id="@+id/fl_full_postal"
@@ -288,13 +287,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:subtitle="@string/label_movie_postal"
-                app:title="@{movie.title}"
                 android:shadowColor="@color/colorSecondaryDark"
                 android:theme="@style/Theme.App.AppBarOverlay"
                 app:layout_constraintTop_toTopOf="parent"
                 app:navigationIcon="?attr/homeAsUpIndicator"
-                app:popupTheme="@style/Theme.App.PopupOverlay" />
+                app:popupTheme="@style/Theme.App.PopupOverlay"
+                app:subtitle="@string/label_movie_postal"
+                app:title="@{movie.title}" />
+
             <ImageView
                 android:id="@+id/iv_full_postal"
                 android:layout_width="match_parent"
