--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -7,12 +7,12 @@
             android:id="@+id/rv_movie_videos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"></android.support.v7.widget.RecyclerView>
+            android:padding="8dp"/>
         <TextView
             android:id="@+id/tv_loading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
+            android:layout_gravity="top|start"
             android:layout_margin="10dp"
             android:text="@string/msg_loading"
             android:textStyle="italic"
@@ -21,7 +21,7 @@
             android:id="@+id/tv_no_video"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|left"
+            android:layout_gravity="top|start"
             android:layout_margin="10dp"
             android:text="@string/msg_no_video"
             android:textStyle="italic"
