--- a/app/src/main/res/layout/movie_review_item.xml
+++ b/app/src/main/res/layout/movie_review_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -36,7 +35,7 @@
                 android:text="@{icon_letter}"
                 android:textAllCaps="true"
                 android:textColor="@color/colorSecondaryLight"
-                android:textSize="30dp"
+                android:textSize="30sp"
                 app:layout_constraintTop_toTopOf="@+id/text_author"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_content" />
@@ -58,6 +57,7 @@
                 android:layout_height="12sp"
                 android:src="@drawable/ic_person_16dp"
                 android:tint="@color/colorSecondaryLight"
+                android:contentDescription="@string/icon_label"
                 app:layout_constraintBottom_toTopOf="@+id/text_author"
                 app:layout_constraintStart_toStartOf="@+id/text_content"
                 app:layout_constraintTop_toBottomOf="@+id/text_author"
