--- a/app/src/main/res/layout/movie_video_item.xml
+++ b/app/src/main/res/layout/movie_video_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <import type="android.view.View" />
 
         <variable
             name="video"
@@ -12,17 +14,21 @@
         <variable
             name="thumbnail_url"
             type="String" />
+
         <variable
             name="sharable"
-            type="Boolean" />
-
+            type="java.lang.Boolean" />
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginVertical="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:background="@color/color_white">
 
         <ImageView
@@ -50,24 +56,26 @@
             android:id="@+id/action_play"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:contentDescription="@string/msg_play_video"
             android:backgroundTint="@color/transparent"
+            android:contentDescription="@string/msg_play_video"
             android:scaleType="centerInside"
             android:src="@mipmap/bg_play"
             app:layout_constraintBottom_toBottomOf="@+id/iv_thumbnail"
             app:layout_constraintLeft_toLeftOf="@+id/iv_thumbnail"
             app:layout_constraintRight_toRightOf="@+id/iv_thumbnail"
-            app:layout_constraintTop_toTopOf="@+id/iv_thumbnail" />
+            app:layout_constraintTop_toTopOf="@+id/iv_thumbnail"
+            tools:targetApi="lollipop" />
 
         <ImageButton
             android:id="@+id/action_share"
-            android:padding="5dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:contentDescription="@string/label_share_with"
+            android:padding="5dp"
+            android:src="?attr/actionModeShareDrawable"
             android:visibility="@{sharable ? View.VISIBLE : View.GONE}"
-            app:layout_constraintTop_toTopOf="@+id/iv_thumbnail"
             app:layout_constraintRight_toRightOf="@+id/iv_thumbnail"
-            android:src="?attr/actionModeShareDrawable" />
+            app:layout_constraintTop_toTopOf="@+id/iv_thumbnail" />
 
         <TextView
             android:layout_width="0dp"
