--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,11 +6,13 @@
         <item>@string/pref_filter_popular_label</item>
         <item>@string/pref_filter_top_rated_label</item>
         <item>@string/pref_filter_upcoming_label</item>
+        <item>@string/pref_filter_favorite_label</item>
     </array>
     <array name="pref_filter_option_values">
         <item>@string/pref_filter_now_playing_value</item>
         <item>@string/pref_filter_popular_value</item>
         <item>@string/pref_filter_top_rated_value</item>
         <item>@string/pref_filter_upcoming_value</item>
+        <item>@string/pref_filter_favorite_value</item>
     </array>
 </resources>
