--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.App" parent="Base.Theme.App"></style>
+    <style name="Theme.App" parent="Base.Theme.App"/>
     <!-- Base application theme. -->
      <style name="Base.Theme.App" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
